--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,10 @@
+mybatis:
+  type-aliases-package: com.cht.testspringboot.dal
+  mapper-locations: classpath*:mybatis/mapper/*.xml
 
+spring:
+  datasource:
+    driverClassName: com.mysql.jdbc.Driver
+    url: jdbc:mysql://39.108.144.11:3306/haron?useUnicode=true&characterEncoding=utf-8
+    username: root
+    password: root
